<resources>
    <string name="app_name">EcoHuerto 2.0</string>
    <string name="title_activity_huerto">HuertoActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="text_button_login">Sign In</string>
    <string name="textFaq">FAQ</string>
    <string name="textAbout">About Us</string>
    <string name="textHuerto">EcoHuerto</string>
    <string name="textForgotPassword">Did you forget your password? Click Here</string>
    <string name="hint_first_name">Nombre</string>
    <string name="hint_last_name">Apellidos</string>
    <string name="hint_repeat_password">Repita la contraseña</string>
    <string name="hint_phone">Teléfono</string>
    <string name="button_register_user">Registrarse</string>
    <string name="checkbox_accept_terms">Acepto los términos y condiciones</string>
    <string name="button_reset_fields">Reset campos</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="action_example">Example action</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_huerto_list">Huertos</string>
    <string name="title_huerto_detail">Huerto Detail</string>

    <!-- Preferencias -->
    <string name="sharedpreferences_filename">login</string>
    <string name="jwt_key">JWT_KEY</string>
    <string name="jwt_id">JWT_ID</string>
    <string name="title_prueba_list">Pruebas</string>
    <string name="title_prueba_detail">Prueba Detail</string>
    <string name="borrar">Borrar</string>
    <string name="activar">Activar</string>
    <string name="desactivar">Desactivar</string>
    <string name="cancel">Cancelar</string>
    <string name="dialog_title">Borrar</string>
    <string name="dialog_title_riegoOn">Activar riego</string>
    <string name="dialog_title_riegoOff">Desactivar riego</string>
    <string name="dialog_message">¿Está seguro de que quiere borrar?</string>
    <string name="dialog_message_riegoOn">¿Quieres activar el riego automático?</string>
    <string name="dialog_message_riegoOff">¿Quieres desactivar el riego automático?</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_profile_two">Profile2</string>
    <string name="temperatura">Temperatura</string>
    <string name="probabilidad_lluvia">Probabilidad de lluvia</string>
    <string name="humedad">Humedad</string>
    <string name="viento">Viento</string>
</resources>
